--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
-inventory = ./inventory.ini                     # 현재 폴더의 인벤토리 파일 사용하도록 지정
-host_key_checking = False                       # 호스트 접속 시 ssh키 검증 건너뛰기
-collections_paths = ~/.ansible/collections:/usr/share/ansible/collections
+inventory = ./inventory.ini
+host_key_checking = False
+collections_path = ~/.ansible/collections:/usr/share/ansible/collections
