--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -295,7 +295,7 @@ jobs:
 
       - name: Verify AWS SSM plugin availability
         run: |
-          ansible-doc -t connection amazon.aws.aws_ssm
+          ansible-doc -t connection aws_ssm
 
       - name: Create Ansible inventory with SSM connection
         working-directory: ./ansible
@@ -306,7 +306,7 @@ jobs:
           ${{ needs.deploy-infrastructure.outputs.ec2-id-2 }}
           
           [webservers:vars]
-          ansible_connection=amazon.aws.aws_ssm
+          ansible_connection=aws_ssm
           ansible_aws_ssm_region=${{ env.AWS_REGION }}
           ansible_aws_ssm_timeout=60
           ansible_aws_ssm_retries=3
@@ -420,7 +420,7 @@ jobs:
           ${{ needs.deploy-infrastructure.outputs.ec2-id-2 }}
           
           [webservers:vars]
-          ansible_connection=amazon.aws.aws_ssm
+          ansible_connection=aws_ssm
           ansible_aws_ssm_region=${{ env.AWS_REGION }}
           ansible_aws_ssm_timeout=60
           ansible_aws_ssm_retries=3
