--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -231,7 +231,7 @@ jobs:
             echo "cloudfront-url=$CLOUDFRONT_URL" >> $GITHUB_OUTPUT
           fi
 
-  # 서버 설정 (Ansible + SSM) - aws_ssm 플러그인 방식
+  # 서버 설정 (Ansible + SSM) - amazon.aws.aws_ssm 플러그인 방식
   setup-servers:
     needs: [detect-changes, deploy-infrastructure]
     if: |
