--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -310,6 +310,8 @@ jobs:
           ansible_aws_ssm_region=${{ env.AWS_REGION }}
           ansible_aws_ssm_timeout=60
           ansible_aws_ssm_retries=3
+          ansible_aws_ssm_bucket_name=""
+          ansible_aws_ssm_use_instance_role=true
           EOF
 
       - name: Test Ansible connectivity
@@ -424,6 +426,8 @@ jobs:
           ansible_aws_ssm_region=${{ env.AWS_REGION }}
           ansible_aws_ssm_timeout=60
           ansible_aws_ssm_retries=3
+          ansible_aws_ssm_bucket_name=""
+          ansible_aws_ssm_use_instance_role=true
           EOF
 
       - name: Deploy configuration via Ansible
