--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -291,11 +291,10 @@ jobs:
           pip install --upgrade pip
           pip install "ansible-core>=2.15,<2.17" "boto3>=1.28.0" "botocore>=1.31.0"
           ansible-galaxy collection install "amazon.aws:>=6.0.0,<7.0.0" --force
-          ansible-galaxy collection install "community.aws:>=6.0.0,<7.0.0" --force
 
       - name: Verify AWS SSM plugin availability
         run: |
-          ansible-doc -t connection aws_ssm
+          ansible-doc -t connection amazon.aws.aws_ssm
 
       - name: Create Ansible inventory with SSM connection
         working-directory: ./ansible
@@ -306,12 +305,10 @@ jobs:
           ${{ needs.deploy-infrastructure.outputs.ec2-id-2 }}
           
           [webservers:vars]
-          ansible_connection=aws_ssm
+          ansible_connection=amazon.aws.aws_ssm
           ansible_aws_ssm_region=${{ env.AWS_REGION }}
           ansible_aws_ssm_timeout=60
           ansible_aws_ssm_retries=3
-          ansible_aws_ssm_bucket_name=""
-          ansible_aws_ssm_use_instance_role=true
           EOF
 
       - name: Test Ansible connectivity
@@ -363,7 +360,6 @@ jobs:
         run: |
           pip install "ansible-core>=2.15,<2.17" "boto3>=1.28.0" "botocore>=1.31.0"
           ansible-galaxy collection install "amazon.aws:>=6.0.0,<7.0.0" --force
-          ansible-galaxy collection install "community.aws:>=6.0.0,<7.0.0" --force
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -422,12 +418,10 @@ jobs:
           ${{ needs.deploy-infrastructure.outputs.ec2-id-2 }}
           
           [webservers:vars]
-          ansible_connection=aws_ssm
+          ansible_connection=amazon.aws.aws_ssm
           ansible_aws_ssm_region=${{ env.AWS_REGION }}
           ansible_aws_ssm_timeout=60
           ansible_aws_ssm_retries=3
-          ansible_aws_ssm_bucket_name=""
-          ansible_aws_ssm_use_instance_role=true
           EOF
 
       - name: Deploy configuration via Ansible
