--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -359,7 +359,7 @@ jobs:
         working-directory: ./backend
         run: |
           chmod +x gradlew
-          ./gradlew build -x test
+          ./gradlew bootJar -x test
 
       - name: Setup Python and Ansible
         uses: actions/setup-python@v4
