Jinja2 템플릿 경로 수정

--- a/ansible/playbooks/db-config.yaml
+++ b/ansible/playbooks/db-config.yaml
@@ -19,7 +19,7 @@
 
     - name: Deploy application.yml
       template:
-        src: templates/application.yaml.j2
+        src: ../templates/application.yaml.j2
         dest: /opt/config/application.yml
         mode: '0644'
         owner: ec2-user
