--- a/ansible/playbooks/jar-deploy.yaml
+++ b/ansible/playbooks/jar-deploy.yaml
@@ -16,7 +16,7 @@
 
     - name: Copy JAR file from files directory (GitHub Actions prepared)
       copy:
-        src: "{{ jar_file | default('files/app.jar') }}"
+        src: "{{ jar_file | default('../files/app.jar') }}"
         dest: /opt/app/app.jar
         owner: ec2-user
         group: ec2-user
