--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'  // 이 줄 추가
+
     
     // Database
     runtimeOnly 'com.h2database:h2' // 개발용
