--- a/ansible/playbooks/jar-deploy.yaml
+++ b/ansible/playbooks/jar-deploy.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Deploy JAR File
+- name: Deploy JAR File with Robust Service Management
   hosts: webservers
 
   tasks:
@@ -10,9 +10,19 @@
       become: yes
       failed_when: false
 
-    - name: Wait for service to stop
+    - name: Wait for service to completely stop
       wait_for:
-        timeout: 10
+        timeout: 15
+      
+    - name: Verify service is stopped
+      systemd:
+        name: voting-app
+      register: stop_status
+      become: yes
+      
+    - name: Log service stop status
+      debug:
+        msg: "Service stop status: {{ stop_status.status.ActiveState }}"
 
     - name: Copy JAR file from files directory (GitHub Actions prepared)
       copy:
@@ -41,16 +51,28 @@
 
     - name: Fail if JAR file not found
       fail:
-        msg: "JAR file not found at /opt/app/app.jar. Please ensure JAR file is copied or SSM deployment completed successfully."
+        msg: "JAR file not found at /opt/app/app.jar"
       when: not jar_file_stat.stat.exists
 
-    - name: Start voting-app service
+    - name: Reload systemd daemon
+      systemd:
+        daemon_reload: yes
+      become: yes
+
+    - name: Start voting-app service with retry
       systemd:
         name: voting-app
         state: started
         enabled: yes
       become: yes
-      when: jar_file_stat.stat.exists
+      register: start_result
+      retries: 3
+      delay: 10
+      until: start_result is succeeded
+
+    - name: Wait for service to initialize
+      wait_for:
+        timeout: 30
 
     - name: Verify service is running
       systemd:
@@ -58,6 +80,44 @@
       register: service_status
       become: yes
 
-    - name: Show service status
+    - name: Show detailed service status
       debug:
-        msg: "Service status: {{ service_status.status.ActiveState }}"
+        msg: "Service ActiveState: {{ service_status.status.ActiveState }}, SubState: {{ service_status.status.SubState }}"
+
+    - name: Fail if service is not active
+      fail:
+        msg: "Service failed to start properly. Status: {{ service_status.status.ActiveState }}"
+      when: service_status.status.ActiveState != "active"
+
+    - name: Wait for application to be ready
+      wait_for:
+        port: 8080
+        host: localhost
+        timeout: 60
+        delay: 5
+      become: yes
+
+    - name: Test application health endpoint
+      uri:
+        url: "http://localhost:8080/actuator/health"
+        method: GET
+        timeout: 10
+      register: health_check
+      retries: 5
+      delay: 10
+      until: health_check.status == 200
+      become: yes
+
+    - name: Show health check result
+      debug:
+        msg: "Application health check: {{ health_check.status }} - {{ health_check.json.status if health_check.json is defined else 'No JSON response' }}"
+
+    - name: Final service verification
+      systemd:
+        name: voting-app
+      register: final_status
+      become: yes
+
+    - name: Deployment success confirmation
+      debug:
+        msg: "Deployment completed successfully. Service is {{ final_status.status.ActiveState }} and responding to health checks."
