--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -25,8 +25,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'  // 이 줄 추가
-
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    
+    // AWS SDK 추가
+    implementation platform('software.amazon.awssdk:bom:2.21.29')
+    implementation 'software.amazon.awssdk:ec2'
+    implementation 'software.amazon.awssdk:elasticloadbalancingv2'
+    implementation 'software.amazon.awssdk:rds'
+    implementation 'software.amazon.awssdk:s3'
+    implementation 'software.amazon.awssdk:cloudfront'
     
     // Database
     runtimeOnly 'com.h2database:h2' // 개발용
