--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,8 +1,12 @@
+# 이 파일은 GitHub Actions에서 동적으로 생성됩니다
+# EC2 인스턴스 ID들과 SSM 연결 설정이 자동으로 주입됩니다
+
 [webservers]
-web1 ansible_host=172.31.47.117 ansible_user=ec2-user
-web2 ansible_host=172.31.40.58 ansible_user=ec2-user
+# EC2 인스턴스 IDs will be populated by GitHub Actions
 
 [webservers:vars]
-ansible_ssh_common_args='-o ProxyCommand="aws ssm start-session --target %h --document-name AWS-StartSSHSession --parameters portNumber=%p"'
-ansible_ssh_pipelining=True
-ansible_ssh_retries=3
+# SSM connection settings will be populated by GitHub Actions
+ansible_connection=aws_ssm
+ansible_aws_ssm_region=ap-northeast-2
+ansible_aws_ssm_timeout=60
+ansible_aws_ssm_retries=3
